--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,5 @@
-APP_TITLE="ts-appconfig"
+APP_TITLE="Typescript App Config"
+NODE_ENV=test
+GREETING=hello
+SHOULD_LOG_GREETING=true
+NUMBER_OF_TIMES=4
