--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: node_js
 node_js:
-  - "12.13.0"
+  - 16
 install:
-  - npm install --ignore-scripts
+  - npm install
 after_success:
 	- npm run coveralls
