--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"build:dev:clean": "npm run clean && npm run build:dev",
 		"build:prod": "npm run preprocess prod && npm run lint:prod && npm run compile && npm run postprocess prod",
 		"build:prod:clean": "npm run clean && npm run build:prod",
-		"compile": "./node_modules/.bin/tsc",
+		"compile": "tsc",
 		"preprocess": "",
 		"postprocess": "",
 		"doc": "typedoc --out docs src",
@@ -22,11 +22,10 @@
 		"coverage-test": "jasmine --config=jasmine.json",
 		"coveralls": "cat ./coverage/lcov.info | coveralls"
 	},
-	"dependencies": {},
 	"devDependencies": {
 		"@istanbuljs/nyc-config-typescript": "^1.0.2",
 		"@types/jasmine": "^3.10.3",
-		"@types/node": "^12.20.42",
+		"@types/node": "^16.11.21",
 		"@typescript-eslint/eslint-plugin": "^4.33.0",
 		"@typescript-eslint/parser": "^4.33.0",
 		"coveralls": "^3.1.1",
